kubernetes/apps/automation/kubernetes-mcp-server/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app kubernetes-mcp-server
  namespace: &namespace automation
spec:
  hostnames:
    - kubernetes-mcp-server.popov.wtf
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: *app
          namespace: *namespace
          port: 8080
